--- a/css/offer/mobile.css
+++ b/css/offer/mobile.css
@@ -1,7 +1,7 @@
 @import url(../colors.css);
 
 #mobile-offer {
-    margin-top: 10vh;
+    margin-top: 7.5vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -25,13 +25,17 @@
 
 .offer-section-text {
     font-weight: 400;
-    width: 73vw;
+    width: 75vw;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     color: var(--color-black)
+}
+
+.offer-section-p{
+    line-height: 1.15em;
 }
 
 .top-section {
