--- a/css/pricing/mobile.css
+++ b/css/pricing/mobile.css
@@ -30,6 +30,7 @@
     margin-bottom: 10vh;
     color: white;
     text-align: center;
+    line-height: 1.15em;
     width: 80vw;
 }
 
